h1(eveTopic). Release Notes

h2(eveTopic). Version 1.19

* [Bug Fix] improved performance by changing PV Formatting behavior

h2(eveTopic). Version 1.18

* [Feature] Scans now have the option to declare the location of the data in the data file (Scan Module Storage Option)
* [Feature] eveCSS is now based on CSS 3.2.15
* [Feature] Notification on metadata update (DBE_PROPERTY)

* [Bug Fix] improved memory consumption by removing duplicate literals when loading a device definition

h2(eveTopic). Version 1.16

* [Bug Fix] fixed corrupt default device definition XML file
* [Bug Fix] removed potential memory leak in File IO

h2(eveTopic). Version 1.15

* [Feature] revised default device definition file (loaded if no <i>eve.root</i> is given)

* [Bug Fix] fixed faulty behavior when <i>eve.root</i> is not set

h2(eveTopic). Version 1.14 

* [Feature] eveCSS is now based on CSS 3.2.7
* [Feature] PV access now uses PV Manager 2.x API (without workarounds)
* [Feature] added CSS PV Files Viewer View
* [Feature] added PV Manager System data source (see CSS Core Help for more info)
* [Feature] incremented schema version to 2.3

* [Bug Fix] added EPICS_CA_MAX_ARRAY_BYTES environment variable entry to the VM

h2(eveTopic). Version 1.12

* [Feature] changed default behavior of combo boxes used in tables

h2(eveTopic). Version 1.11

* [Feature] test sites now decide when to "update":/help/topic/de.ptb.epics.eve.help/help/content/tasks/updateeveversion.html to a new version
* [Feature] simplified "creation of device definition":/help/topic/de.ptb.epics.eve.help/help/content/tasks/createdevicedescription.html files

h2(eveTopic). Version 1.10

* [Feature] the version of eveCSS is now shown in the title bar
* [Feature] eveCSS 1.10 is now based on CSS 3.1
* [Feature] the logger configuration is now integrated (no longer expected in eve.root)

h2(eveTopic). Version 1.8

* [Feature] incremented schema version to 2.2

h2(eveTopic). Version 1.7
