@@ -1,1 +1,1 @@
-<?xml version='1.0' encoding='utf-8' ?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>whatsnew</title><link type="text/css" rel="stylesheet" href="PLUGINS_ROOT/de.ptb.epics.eve.help/help/css/help.css"/></head><body><h1 id="ReleaseNotes" class="eveTopic">Release Notes</h1><h2 id="Version1.19" class="eveTopic">Version 1.19</h2><ul><li>[Bug Fix] improved performance by changing PV Formatting behavior</li></ul><h2 id="Version1.18" class="eveTopic">Version 1.18</h2><ul><li>[Feature] Scans now have the option to declare the location of the data in the data file (Scan Module Storage Option)</li><li>[Feature] eveCSS is now based on CSS 3.2.15</li><li>[Feature] Notification on metadata update (DBE_PROPERTY)</li></ul><ul><li>[Bug Fix] improved memory consumption by removing duplicate literals when loading a device definition</li></ul><h2 id="Version1.16" class="eveTopic">Version 1.16</h2><ul><li>[Bug Fix] fixed corrupt default device definition XML file</li><li>[Bug Fix] removed potential memory leak in File IO</li></ul><h2 id="Version1.15" class="eveTopic">Version 1.15</h2><ul><li>[Feature] revised default device definition file (loaded if no <i>eve.root</i> is given)</li></ul><ul><li>[Bug Fix] fixed faulty behavior when <i>eve.root</i> is not set</li></ul><h2 id="Version1.14" class="eveTopic">Version 1.14 </h2><ul><li>[Feature] eveCSS is now based on CSS 3.2.7</li><li>[Feature] PV access now uses PV Manager 2.x API (without workarounds)</li><li>[Feature] added CSS PV Files Viewer View</li><li>[Feature] added PV Manager System data source (see CSS Core Help for more info)</li><li>[Feature] incremented schema version to 2.3</li></ul><ul><li>[Bug Fix] added EPICS_CA_MAX_ARRAY_BYTES environment variable entry to the VM</li></ul><h2 id="Version1.12" class="eveTopic">Version 1.12</h2><ul><li>[Feature] changed default behavior of combo boxes used in tables</li></ul><h2 id="Version1.11" class="eveTopic">Version 1.11</h2><ul><li>[Feature] test sites now decide when to <a href="/help/topic/de.ptb.epics.eve.help/help/content/tasks/updateeveversion.html">update</a> to a new version</li><li>[Feature] simplified <a href="/help/topic/de.ptb.epics.eve.help/help/content/tasks/createdevicedescription.html">creation of device definition</a> files</li></ul><h2 id="Version1.10" class="eveTopic">Version 1.10</h2><ul><li>[Feature] the version of eveCSS is now shown in the title bar</li><li>[Feature] eveCSS 1.10 is now based on CSS 3.1</li><li>[Feature] the logger configuration is now integrated (no longer expected in eve.root)</li></ul><h2 id="Version1.8" class="eveTopic">Version 1.8</h2><ul><li>[Feature] incremented schema version to 2.2</li></ul><h2 id="Version1.7" class="eveTopic">Version 1.7</h2><ul><li>[Feature] incremented schema version to 2.1 due to changes in the data type of parent in scanmodule (now allowing negative integers representing orphan scan modules)</li></ul><h2 id="Version1.5" class="eveTopic">Version 1.5</h2><ul><li>[Feature] Added help <a href="/help/topic/de.ptb.epics.eve.help/help/content/reference/keyboardshortcuts.html">reference sheet</a> for (eclipse) keyboard shortcuts</li></ul><h2 id="Version1.4" class="eveTopic">Version 1.4</h2><ul><li>[Bug Fix] Engine name, port and location preference entries are now viewer specific (as expected)</li></ul><h2 id="Version1.2" class="eveTopic">Version 1.2</h2><ul><li>[Feature] eveCSS 1.2 uses schema version 1.0</li><li>[Feature] The XML schema is no longer needed in the <i>eve.root</i> directory</li></ul></body></html>
+<?xml version='1.0' encoding='utf-8' ?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>whatsnew</title><link type="text/css" rel="stylesheet" href="PLUGINS_ROOT/de.ptb.epics.eve.help/help/css/help.css"/></head><body><h1 id="ReleaseNotes" class="eveTopic">Release Notes</h1><h2 id="Version1.19" class="eveTopic">Version 1.19</h2><ul><li>[Bug Fix] improved performance by changing PV Formatting behavior</li><li>[Bug Fix] fixed malicious PV behavior by downgrading back to CSS 3.2.7</li></ul><h2 id="Version1.18" class="eveTopic">Version 1.18</h2><ul><li>[Feature] Scans now have the option to declare the location of the data in the data file (Scan Module Storage Option)</li><li>[Feature] eveCSS is now based on CSS 3.2.15</li><li>[Feature] Notification on metadata update (DBE_PROPERTY)</li></ul><ul><li>[Bug Fix] improved memory consumption by removing duplicate literals when loading a device definition</li></ul><h2 id="Version1.16" class="eveTopic">Version 1.16</h2><ul><li>[Bug Fix] fixed corrupt default device definition XML file</li><li>[Bug Fix] removed potential memory leak in File IO</li></ul><h2 id="Version1.15" class="eveTopic">Version 1.15</h2><ul><li>[Feature] revised default device definition file (loaded if no <i>eve.root</i> is given)</li></ul><ul><li>[Bug Fix] fixed faulty behavior when <i>eve.root</i> is not set</li></ul><h2 id="Version1.14" class="eveTopic">Version 1.14 </h2><ul><li>[Feature] eveCSS is now based on CSS 3.2.7</li><li>[Feature] PV access now uses PV Manager 2.x API (without workarounds)</li><li>[Feature] added CSS PV Files Viewer View</li><li>[Feature] added PV Manager System data source (see CSS Core Help for more info)</li><li>[Feature] incremented schema version to 2.3</li></ul><ul><li>[Bug Fix] added EPICS_CA_MAX_ARRAY_BYTES environment variable entry to the VM</li></ul><h2 id="Version1.12" class="eveTopic">Version 1.12</h2><ul><li>[Feature] changed default behavior of combo boxes used in tables</li></ul><h2 id="Version1.11" class="eveTopic">Version 1.11</h2><ul><li>[Feature] test sites now decide when to <a href="/help/topic/de.ptb.epics.eve.help/help/content/tasks/updateeveversion.html">update</a> to a new version</li><li>[Feature] simplified <a href="/help/topic/de.ptb.epics.eve.help/help/content/tasks/createdevicedescription.html">creation of device definition</a> files</li></ul><h2 id="Version1.10" class="eveTopic">Version 1.10</h2><ul><li>[Feature] the version of eveCSS is now shown in the title bar</li><li>[Feature] eveCSS 1.10 is now based on CSS 3.1</li><li>[Feature] the logger configuration is now integrated (no longer expected in eve.root)</li></ul><h2 id="Version1.8" class="eveTopic">Version 1.8</h2><ul><li>[Feature] incremented schema version to 2.2</li></ul><h2 id="Version1.7" class="eveTopic">Version 1.7</h2><ul><li>[Feature] incremented schema version to 2.1 due to changes in the data type of parent in scanmodule (now allowing negative integers representing orphan scan modules)</li></ul><h2 id="Version1.5" class="eveTopic">Version 1.5</h2><ul><li>[Feature] Added help <a href="/help/topic/de.ptb.epics.eve.help/help/content/reference/keyboardshortcuts.html">reference sheet</a> for (eclipse) keyboard shortcuts</li></ul><h2 id="Version1.4" class="eveTopic">Version 1.4</h2><ul><li>[Bug Fix] Engine name, port and location preference entries are now viewer specific (as expected)</li></ul><h2 id="Version1.2" class="eveTopic">Version 1.2</h2><ul><li>[Feature] eveCSS 1.2 uses schema version 1.0</li><li>[Feature] The XML schema is no longer needed in the <i>eve.root</i> directory</li></ul></body></html>
