@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<?pde version="3.8"?><target name="eveCSSide4" sequenceNumber="34">
+<?pde version="3.8"?><target name="eveCSSide4" sequenceNumber="40">
 <locations>
-<location path="/messung/eve/java/Eclipse/eclipse-rcp-indigo-SR2-linux-gtk-x86_64" type="Directory"/>
 <location path="/messung/eve/java/Eclipse/swtbot" type="Directory"/>
-<location path="/messung/eve/java/CSS/3.2.15" type="Directory"/>
+<location path="/messung/eve/java/Eclipse/eclipse-rcp-indigo-SR2-linux-gtk-x86_64" type="Directory"/>
+<location path="/messung/eve/java/CSS/3.2.7" type="Directory"/>
 </locations>
 </target>
